fix: use device_key for mqtt-parameters endpoint
